gccida/g2/make_tree
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4511:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4514:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4517:5: error: expected ';' after expression
tree v14; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4517:6: error: use of undeclared identifier 'v14'
tree v14; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4518:5: error: expected ';' after expression
tree v15; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4518:6: error: use of undeclared identifier 'v15'
tree v15; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4519:5: error: expected ';' after expression
tree v16; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4519:6: error: use of undeclared identifier 'v16'
tree v16; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4520:5: error: expected ';' after expression
tree v17; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4520:6: error: use of undeclared identifier 'v17'
tree v17; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4521:5: error: expected ';' after expression
tree v18; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4521:6: error: use of undeclared identifier 'v18'
tree v18; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4523:5: error: expected ';' after expression
tree v20; // r13 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4523:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
tree v20; // r13 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4514:12: note: 'v10' declared here
tree_node *v10; // r12 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4524:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/expmed.c:4525:5: error: expected ';' after expression
tree v22; // r12 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_tree/src/obj/expmed.o] Error 1
